tests/paczka1/fuzzy1/57267491.err
Error in line 19: QJV S652 16,1
Error in line 33: S652 S652 84,3
